WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239446
[WebGPU] Fix texture conversion format typo
https://bugs.webkit.org/show_bug.cgi?id=239446
Summary
[WebGPU] Fix texture conversion format typo
Myles C. Maxfield
Reported
2022-04-17 18:31:47 PDT
.
Attachments
Patch
(1.70 KB, patch)
2022-04-17 18:33 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-04-17 18:33:18 PDT
Created
attachment 457789
[details]
Patch
EWS
Comment 2
2022-04-20 08:58:08 PDT
Committed
r293096
(
249807@main
): <
https://commits.webkit.org/249807@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457789
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-20 08:59:23 PDT
<
rdar://problem/92030186
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug