[WebGPU] Fix texture conversion format typo https://bugs.webkit.org/show_bug.cgi?id=239446

Reviewed by Kimmo Kinnunen.

I mixed up "plus" and "unorm".

* pal/graphics/WebGPU/Impl/WebGPUConvertToBackingContext.cpp:
(PAL::WebGPU::ConvertToBackingContext::convertToBacking):

Canonical link: https://commits.webkit.org/249807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293096 268f45cc-cd09-0410-ab3c-d52691b4dbfc